# nfl-tools

./: .gitignore  README.md  animate_plays_with_plotly.ipynb  birth_places.py  birthlocations.csv  loader.py  nfl-tools.ipynb  pyproject.toml  settings.py
